reversi: status window
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,13 +3,13 @@ add_library(lib
 	Application.h
 	Board.cpp
 	Board.h
-	Demo.cpp
-	Demo.h
 	Image.cpp
 	Image.h
 	Layer.h
 	Player.cpp
 	Player.h
+	Status.h
+	Status.cpp
 	Tile.h
 	Tile.cpp
 )
